# godot-rust-hello

./: .gitmodules
godot-frontend/: .gitignore  CMakeLists.txt  export_presets.cfg  gd_example.tscn  icon.svg.import  main.tscn  project.godot
godot-frontend/src/: gdexample.cpp  gdexample.gdextension  gdexample.h
rust-server/: Cargo.toml
rust-server/src/: lib.rs  main.rs
